@@ -14,7 +14,6 @@
 //
 // CUTS_CHAOS_CCM_Container_Strategy
 //
-CUTS_INLINE
 CUTS_CHAOS_CCM_Container_Strategy::
 CUTS_CHAOS_CCM_Container_Strategy (CUTS_CHAOS_CCM_Container & container)
 : CUTS_CHAOS_CCM_Container_Strategy_Base (container)
