@@ -2,17 +2,6 @@
 // $Id$
 
 //
-// CUTS_OpenSplice_CCM_Container_Strategy
-//
-CUTS_INLINE
-CUTS_OpenSplice_CCM_Container_Strategy::
-CUTS_OpenSplice_CCM_Container_Strategy (CUTS_OpenSplice_CCM_Container * container)
-: base_type (container)
-{
-
-}
-
-//
 // ~CUTS_OpenSplice_CCM_Container_Strategy
 //
 CUTS_INLINE
